# flutsch

./: .gitignore  README.md  a.nix  default.nix  flake.nix  flutsch.json  meson.build  test copy.nix  test.json  test.nix  values.json
cli/: main.cc  meson.build
src/: eval.cc  flutsch.cc  meson.build
src/include/: eval.hh  flutsch.hh
test/: meson.build  test.cc
test/assets/: simple.expect
